Closed
Bug 1793329
Opened 2 years ago
Closed 2 years ago
Remove unused nsStyleEffects.mClip
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
107 Branch
Tracking | Status | |
---|---|---|
firefox107 | --- | fixed |
People
(Reporter: ben.freist, Assigned: ben.freist)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36
Steps to reproduce:
I looked into replacing the defines NS_STYLE_CLIP_* from nsStyleConsts.h with an enum class. I couldn't find a single reference to them, so it seemed better to just remove them.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → ben.freist
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•2 years ago
|
Attachment #9297028 -
Attachment description: Bug 1793329 - [refactor] Remove unused nsStyleEffects.mClip r=emilio → Bug 1793329 - [refactor] Remove unused NS_STYLE_CLIP_* constants r=emilio
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fbed5b102d00
[refactor] Remove unused NS_STYLE_CLIP_* constants r=emilio
Comment 3•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox107:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•