Bug 1793329 - [refactor] Remove unused NS_STYLE_CLIP_* constants r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D158519